ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript3/scannerES3NumericLiteral4/input.ts.stderr
error: Expected +, - or decimal digit after e
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript3/scannerES3NumericLiteral4/input.ts:1:3
  |
1 | 1e
  |   ^

